initial commit with module from other amos

--- a/.gitignore
+++ b/.gitignore
@@ -127,3 +127,12 @@ dmypy.json
 
 # Pyre type checker
 .pyre/
+
+# VS Code settings
+.vscode/settings.json
+.vscode/*.*
+.vscode/
+
+# VS Code counter
+.VSCodeCounter/*.*
+.VSCodeCounter/**
