added and passed tests

--- a/tests/project_settings.ini
+++ b/tests/project_settings.ini
@@ -17,5 +17,7 @@ test_data = True
 test_chunk = 500
 random_test_chunk = True
 boolean_out = True
-naming_classes = model, cleave
 export_results = True
+
+[tasks]
+things_to_do = stop, drop, roll
