--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bobbie"
-version = "0.1.0"
+version = "0.1.1"
 description = "flexible, easy python project configuration"
 authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]
 license = "Apache-2.0"
@@ -10,7 +10,7 @@ repository = "https://github.com/WithPrecedent/bobbie"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-amos = "^0.1.5"
+amos = "^0.1.9"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
@@ -19,5 +19,5 @@ pytest = "^5.2"
 formats = ["toml", "pyyaml"]
 
 [build-system]
-requires = ["poetry-core>=1.0.0"]
+requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
