--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "bobbie"
-version = "0.1.1"
+version = "0.1.2"
 description = "flexible, easy python project configuration"
 authors = ["corey rayburn yung <coreyrayburnyung@gmail.com>"]
 license = "Apache-2.0"
@@ -10,7 +10,8 @@ repository = "https://github.com/WithPrecedent/bobbie"
 
 [tool.poetry.dependencies]
 python = "^3.9"
-amos = "^0.1.9"
+ashford = "^0.1.0"
+camina = "^0.1.10"
 
 [tool.poetry.dev-dependencies]
 pytest = "^5.2"
