--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,11 +21,12 @@ classifiers = [
     "Programming Language :: Python :: 3.12",
     "Topic :: Software Development"]
 keywords = []
-dependencies = ["bunches >= 0.1.3"]
+dependencies = [
+    "bunches >= 0.1.3",
+    "wonka >= 0.1.4"]
 
 [project.optional-dependencies]
 env = ["python-dotenv"]
-toml = ["toml"]
 xml = ["xmltodict"]
 yaml = ["pyyaml"]
 
@@ -46,7 +47,6 @@ plugins = [
 
 [tool.pdm.build]
 package-dir = "src"
-# editable-backend = "editables"
 
 [tool.pdm.dev-dependencies]
 docs = [
@@ -183,7 +183,9 @@ suppress-none-returning = true
 docstring-quotes = "double"
 
 [tool.ruff.flake8-type-checking]
-exempt-modules = ["typing", "typing_extensions"]
+exempt-modules = [
+    "typing",
+    "typing_extensions"]
 
 [tool.ruff.flake8-unused-arguments]
 ignore-variadic-names = true
